# script-editor-video

./: .gitignore  README.md  auto_edit.py  auto_edit_simple.py  editado.srt  pyproject.toml
