[project]
name = "script-edicao-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.0",
    "moviepy>=2.2.1",
    "numpy>=2.3.2",
    "pydub>=0.25.1",
    "rapidfuzz>=3.14.0",
    "unidecode>=1.4.0",
    "webrtcvad>=2.0.10",
]
